--- a/src/timetable/sample.fxml
+++ b/src/timetable/sample.fxml
@@ -10,9 +10,10 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
 
+<?import guielements.MyTable?>
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" stylesheets="@styles.css" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="timetable.Controller">
    <center>
-      <GridPane fx:id="gridPane" alignment="TOP_CENTER" gridLinesVisible="true">
+      <MyTable fx:id="gridPane" alignment="TOP_CENTER" gridLinesVisible="true">
         <columnConstraints>
             <ColumnConstraints hgrow="SOMETIMES" maxWidth="70" minWidth="10.0" prefWidth="100.0" />
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -56,7 +57,7 @@
          <rowConstraints>
             <RowConstraints percentHeight="5" />
          </rowConstraints>
-      </GridPane>
+      </MyTable>
    </center>
    <right>
       <Accordion BorderPane.alignment="CENTER">
