--- a/src/timetable/styles.css
+++ b/src/timetable/styles.css
@@ -45,3 +45,8 @@ LectureRepresentation {
 .incorrectlecture {
     -fx-border-color: #f90000;
 }
+
+.selectedlecture {
+    -fx-border-width: 1;
+    -fx-border-color: #4286f4;
+}
