--- a/src/timetable/sample.fxml
+++ b/src/timetable/sample.fxml
@@ -11,6 +11,13 @@
 <?import javafx.scene.layout.RowConstraints?>
 
 <?import guielements.MyTable?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.MenuBar?>
+<?import javafx.scene.control.Menu?>
+<?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.TextField?>
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" stylesheets="@styles.css" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="timetable.Controller">
    <center>
       <MyTable fx:id="gridPane" alignment="TOP_CENTER" gridLinesVisible="true">
@@ -54,30 +61,80 @@
                </children>
             </HBox>
          </children>
-         <rowConstraints>
-            <RowConstraints percentHeight="5" />
-         </rowConstraints>
       </MyTable>
    </center>
-   <right>
-      <Accordion BorderPane.alignment="CENTER">
-        <panes>
-          <TitledPane fx:id="studentGroupsTitledPane" animated="true" text="Studentgroups">
-               <content>
-                  <ListView fx:id="studentGroupsView" prefHeight="200.0" prefWidth="200.0" />
-               </content>
-          </TitledPane>
-          <TitledPane fx:id="teachersTitledPane" animated="true" prefHeight="425.0" prefWidth="144.0" text="Teachers">
-               <content>
-                  <ListView fx:id="teachersView" prefHeight="200.0" prefWidth="200.0" />
-               </content>
-          </TitledPane>
-          <TitledPane fx:id="locationsTitledPane" animated="true" text="Locations">
-               <content>
-                  <ListView fx:id="locationsView" prefHeight="200.0" prefWidth="200.0" />
-               </content>
-          </TitledPane>
-        </panes>
-      </Accordion>
-   </right>
+    <right>
+        <VBox BorderPane.alignment="CENTER">
+            <children>
+                <Accordion fx:id="accordion">
+                    <panes>
+                        <TitledPane fx:id="studentGroupsTitledPane" animated="true" text="Studentgroups">
+                            <content>
+                                <ListView fx:id="studentGroupsView" />
+                            </content>
+                        </TitledPane>
+                        <TitledPane fx:id="teachersTitledPane" animated="true" text="Teachers">
+                            <content>
+                                <ListView fx:id="teachersView" />
+                            </content>
+                        </TitledPane>
+                        <TitledPane fx:id="locationsTitledPane" animated="true" text="Locations">
+                            <content>
+                                <ListView fx:id="locationsView" />
+                            </content>
+                        </TitledPane>
+                    </panes>
+                </Accordion>
+                <HBox prefHeight="22.0" prefWidth="250.0">
+                    <children>
+                        <TextField fx:id="newEntryTextField" prefHeight="27.0" prefWidth="249.0" />
+                    </children>
+                </HBox>
+                <HBox alignment="BOTTOM_CENTER" prefHeight="21.0" prefWidth="202.0">
+                    <children>
+                        <Button fx:id="newEntryButton" mnemonicParsing="false" text="New" onAction="#newEntry"/>
+                        <Button fx:id="renameEntryButton" mnemonicParsing="false" text="Rename Selected" onAction="#renameEntry"/>
+                    </children>
+                </HBox>
+            </children>
+        </VBox>
+    </right>
+    <top>
+        <MenuBar BorderPane.alignment="CENTER">
+            <menus>
+                <Menu mnemonicParsing="false" text="File">
+                    <items>
+                        <MenuItem mnemonicParsing="false" text="Open Database" onAction="#openDatabase"/>
+                        <MenuItem mnemonicParsing="false" text="Create Database" onAction="#createDatabase"/>
+                    </items>
+                </Menu>
+                <Menu mnemonicParsing="false" text="Edit">
+                    <items>
+                        <MenuItem mnemonicParsing="false" text="Edit Selected Lecture" />
+                        <MenuItem mnemonicParsing="false" text="Delete Selected Lecture" />
+                    </items>
+                </Menu>
+                <Menu mnemonicParsing="false" text="Help">
+                    <items>
+                        <MenuItem mnemonicParsing="false" text="About" />
+                    </items>
+                </Menu>
+            </menus>
+        </MenuBar>
+    </top>
+    <bottom>
+        <HBox prefHeight="21.0" prefWidth="600.0" BorderPane.alignment="CENTER">
+            <children>
+                <ComboBox fx:id="studentGroupComboBox" prefWidth="150.0" promptText="StudentGroup" />
+                <ComboBox fx:id="locationComboBox" prefWidth="150.0" promptText="Location" />
+                <ComboBox fx:id="teacherComboBox" prefWidth="150.0" promptText="Teacher" />
+                <Label text="CourseName" />
+                <TextField fx:id="courseNameTextField" />
+                <ComboBox fx:id="dayComboBox" prefWidth="150.0" promptText="Day" />
+                <ComboBox fx:id="startTimeComboBox" prefWidth="150.0" promptText="StartTime" />
+                <ComboBox fx:id="durationComboBox" prefWidth="150.0" promptText="Duration" />
+                <Button fx:id="addLectureButton" mnemonicParsing="false" text="Add Lecture" />
+            </children>
+        </HBox>
+    </bottom>
 </BorderPane>
