--- a/src/starthourdialog/starthourdialog.fxml
+++ b/src/starthourdialog/starthourdialog.fxml
@@ -1,26 +1,23 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<fx:root maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="189.0" prefWidth="195.0" type="BorderPane" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="starthourdialog.StartHourDialogController">
-   <center>
-      <VBox alignment="TOP_CENTER" prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
+
+<VBox xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="starthourdialog.StartHourDialogController">
+   <children>
+      <VBox alignment="TOP_CENTER" prefHeight="200.0" prefWidth="100.0">
          <children>
-            <TextField />
+            <VBox fx:id="textFieldContainer" prefHeight="3.0" prefWidth="195.0" />
             <Button mnemonicParsing="false" onAction="#addTextField" text="Add" />
          </children>
       </VBox>
-   </center>
-   <bottom>
-      <HBox alignment="CENTER_RIGHT" prefHeight="5.0" prefWidth="195.0" BorderPane.alignment="CENTER">
+      <HBox alignment="CENTER_RIGHT" prefHeight="5.0" prefWidth="195.0">
          <children>
             <Button mnemonicParsing="false" onAction="#save" text="Save" />
             <Button mnemonicParsing="false" onAction="#cancel" text="Cancel" />
          </children>
       </HBox>
-   </bottom>
-</fx:root>
+   </children>
+</VBox>
