--- a/src/timetable/sample.fxml
+++ b/src/timetable/sample.fxml
@@ -110,8 +110,8 @@
                 </Menu>
                 <Menu mnemonicParsing="false" text="Edit">
                     <items>
-                        <MenuItem mnemonicParsing="false" text="Edit Selected Lecture" />
-                        <MenuItem mnemonicParsing="false" text="Delete Selected Lecture" />
+                        <MenuItem mnemonicParsing="false" text="Edit Selected Lecture" onAction="#editLecture"/>
+                        <MenuItem mnemonicParsing="false" text="Delete Selected Lecture" onAction="#deleteLecture"/>
                     </items>
                 </Menu>
                 <Menu mnemonicParsing="false" text="Help">
