--- a/src/timetable/styles.css
+++ b/src/timetable/styles.css
@@ -51,7 +51,7 @@ LectureRepresentation {
     -fx-border-color: #4286f4;
 }
 
-.incorrecttimeinput {
+.incorrectinput {
     -fx-border-radius: 3;
     -fx-border-width: 1;
     -fx-border-color: #f90000;
