--- a/src/lectureinfodialog/lectureinput.fxml
+++ b/src/lectureinfodialog/lectureinput.fxml
@@ -8,73 +8,55 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="330.0" prefWidth="600.0" stylesheets="@../timetable/styles.css" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1">
-    <HBox alignment="CENTER" prefHeight="16.0" prefWidth="600.0">
+<VBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="330.0" prefWidth="436.0" stylesheets="@../timetable/styles.css" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1">
+    <HBox alignment="CENTER_LEFT" prefHeight="16.0" prefWidth="600.0">
         <Label nodeOrientation="LEFT_TO_RIGHT" prefHeight="21.0" prefWidth="92.0" text="StudentGroup">
          <HBox.margin>
             <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
          </HBox.margin></Label>
-        <ChoiceBox fx:id="studentGroupChoiceBox" nodeOrientation="LEFT_TO_RIGHT" prefHeight="31.0" prefWidth="199.0" />
-        <Label text="or add new:">
-         <HBox.margin>
-            <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-         </HBox.margin></Label>
-        <TextField />
-        <Button mnemonicParsing="false" text="+" />
+        <ChoiceBox fx:id="studentGroupChoiceBox" nodeOrientation="LEFT_TO_RIGHT" prefHeight="31.0" prefWidth="264.0" />
     </HBox>
-    <HBox alignment="CENTER" prefHeight="11.0" prefWidth="600.0">
+    <HBox alignment="CENTER_LEFT" prefHeight="11.0" prefWidth="600.0">
         <Label text="Teacher">
          <HBox.margin>
             <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
          </HBox.margin></Label>
-        <ChoiceBox fx:id="teacherChoiceBox" prefHeight="31.0" prefWidth="208.0" />
-        <Label text="or add new:">
-         <HBox.margin>
-            <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-         </HBox.margin></Label>
-        <TextField />
-        <Button mnemonicParsing="false" text="+" />
+        <ChoiceBox fx:id="teacherChoiceBox" prefHeight="31.0" prefWidth="305.0" />
     </HBox>
-    <HBox alignment="CENTER" prefHeight="5.0" prefWidth="600.0">
+    <HBox alignment="CENTER_LEFT" prefHeight="5.0" prefWidth="600.0">
         <Label text="Location">
          <HBox.margin>
             <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
          </HBox.margin></Label>
-        <ChoiceBox fx:id="locationChoiceBox" prefHeight="31.0" prefWidth="207.0" />
-        <Label text="or add new:">
-         <HBox.margin>
-            <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-         </HBox.margin></Label>
-        <TextField />
-        <Button mnemonicParsing="false" text="+" />
+        <ChoiceBox fx:id="locationChoiceBox" prefHeight="31.0" prefWidth="301.0" />
     </HBox>
-    <HBox alignment="CENTER_LEFT" prefHeight="6.0" prefWidth="600.0">
+    <HBox alignment="CENTER_LEFT" prefHeight="41.0" prefWidth="526.0">
         <Label text="Course name">
          <HBox.margin>
             <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
          </HBox.margin></Label>
-        <TextField fx:id="courseNameTextField" />
+        <TextField fx:id="courseNameTextField" prefHeight="31.0" prefWidth="271.0" />
     </HBox>
     <HBox alignment="CENTER_LEFT" prefHeight="0.0" prefWidth="600.0">
         <Label text="Day">
          <HBox.margin>
             <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
          </HBox.margin></Label>
-        <ChoiceBox fx:id="dayChoiceBox" prefWidth="150.0" />
+        <ChoiceBox fx:id="dayChoiceBox" prefHeight="31.0" prefWidth="131.0" />
     </HBox>
     <HBox alignment="CENTER_LEFT" prefHeight="2.0" prefWidth="600.0">
         <Label text="Period">
          <HBox.margin>
             <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
          </HBox.margin></Label>
-        <ChoiceBox fx:id="periodChoiceBox" prefWidth="150.0" />
+        <ChoiceBox fx:id="periodChoiceBox" prefHeight="31.0" prefWidth="81.0" />
     </HBox>
     <HBox alignment="CENTER_LEFT" prefHeight="0.0" prefWidth="600.0">
         <Label text="Duration # periods">
          <HBox.margin>
             <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
          </HBox.margin></Label>
-        <ChoiceBox fx:id="durationChoiceBox" prefWidth="150.0" />
+        <ChoiceBox fx:id="durationChoiceBox" prefHeight="31.0" prefWidth="57.0" />
     </HBox>
     <HBox alignment="CENTER_RIGHT" prefHeight="24.0" prefWidth="600.0">
         <Button mnemonicParsing="false" onAction="#save" text="Save" />
